--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,24 +6,25 @@
   <title>FriendFinder</title>
 
   <!-- Latest compiled and minified CSS & JS -->
+ 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
   <!-- Font Awesome Glyphicons -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-
+  
 </head>
 
 <body>
 
   <div class="container">
 
-    <div class="jumbotron">
-      <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+    <div class="jumbotron jumbotron-fluid">
+      <h1><i class=""></i> Friend Finder</h1>
       <hr>
-      <h2>Answer a few basic questions. </h2>
-      <h2>Then find the friend with the greatest compatibility!</h2>
+      <h2>Answer a few questions. </h2>
+      <h2>Then find a friend</h2>
       <br>
 
       <div>
@@ -33,9 +34,7 @@
     </div>
 
     <footer class="footer">
-      <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a></p>
-      </div>
+      
     </footer>
 
   </div>
